Button white space fixed

--- a/css/main.css
+++ b/css/main.css
@@ -86,3 +86,7 @@ button {
 .icon {
   width: 20%;
 }
+
+h3 {
+  margin: 0;
+}
